Fix schedule paging on mobile view

--- a/client/schedule/schedule.scss
+++ b/client/schedule/schedule.scss
@@ -21,6 +21,10 @@
 
     i {
         padding-top: 3.5px;
+    }
+
+    .utilization {
+        padding-left: 15px; 
         white-space: nowrap;
         color: #3F4147; 
     }
